@@ -67,9 +67,9 @@ use JambageCom\Agency\Api\Url;
 use JambageCom\Agency\Configuration\ConfigurationStore;
 use JambageCom\Agency\Constants\Mode;
 use JambageCom\Agency\Controller\Email;
-use JambageCom\Agency\Domain\Data;
-use JambageCom\Agency\Domain\Tca;
-use JambageCom\Agency\Domain\Tables;
+use JambageCom\Agency\Database\Data;
+use JambageCom\Agency\Database\Tca;
+use JambageCom\Agency\Database\Tables;
 use JambageCom\Agency\Request\Parameters;
 use JambageCom\Agency\Security\SecuredData;
 use JambageCom\Agency\Utility\SessionUtility;
