@@ -61,9 +61,9 @@ use JambageCom\Agency\Api\Localization;
 use JambageCom\Agency\Api\ParameterApi;
 use JambageCom\Agency\Api\Url;
 use JambageCom\Agency\Constants\Extension;
-use JambageCom\Agency\Domain\Tca;
-use JambageCom\Agency\Domain\Tables;
-use JambageCom\Agency\Domain\Data;
+use JambageCom\Agency\Database\Tca;
+use JambageCom\Agency\Database\Tables;
+use JambageCom\Agency\Database\Data;
 use JambageCom\Agency\Security\Authentication;
 use JambageCom\Agency\Request\Parameters;
 use JambageCom\Agency\Utility\LocalizationUtility;
