@@ -57,8 +57,8 @@ use JambageCom\Agency\Api\System;
 use JambageCom\Agency\Api\Url;
 use JambageCom\Agency\Configuration\ConfigurationStore;
 use JambageCom\Agency\Controller\Email;
-use JambageCom\Agency\Domain\Data;
-use JambageCom\Agency\Domain\Tca;
+use JambageCom\Agency\Database\Data;
+use JambageCom\Agency\Database\Tca;
 use JambageCom\Agency\Request\Parameters;
 use JambageCom\Agency\Security\Authentication;
 use JambageCom\Agency\Security\SecuredData;
