@@ -49,8 +49,8 @@ use TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer;
 
 use JambageCom\Agency\Api\Localization;
 use JambageCom\Agency\Configuration\ConfigurationStore;
-use JambageCom\Agency\Domain\Tca;
-use JambageCom\Agency\Domain\Data;
+use JambageCom\Agency\Database\Tca;
+use JambageCom\Agency\Database\Data;
 use JambageCom\Agency\Request\Parameters;
 use JambageCom\Agency\Security\SecuredData;
 use JambageCom\Agency\Setfixed\SetfixedUrls;
