@@ -68,8 +68,8 @@ use JambageCom\Agency\Api\Url;
 use JambageCom\Agency\Configuration\ConfigurationStore;
 use JambageCom\Agency\Constants\Extension;
 use JambageCom\Agency\Constants\Mode;
-use JambageCom\Agency\Domain\Data;
-use JambageCom\Agency\Domain\Tca;
+use JambageCom\Agency\Database\Data;
+use JambageCom\Agency\Database\Tca;
 use JambageCom\Agency\Request\Parameters;
 use JambageCom\Agency\Security\Authentication;
 use JambageCom\Agency\Security\SecuredData;
